--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -631,4 +631,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="ok">OK</string>
     <string name="disabled">Disabled</string>
 
+    <!-- Launches Dev Tools -->
+    <string name="development_tools_title">Launch Tools</string>
+
 </resources>
