--- a/res/values-zh-rCN/arrays.xml
+++ b/res/values-zh-rCN/arrays.xml
@@ -29,15 +29,16 @@
     <item msgid="5345178126174698955">"太平洋"</item>
     <item msgid="8392017019801393511">"全部"</item>
   </string-array>
-  <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 秒"</item>
-    <item msgid="8881760709354815449">"30 秒"</item>
-    <item msgid="7589406073232279088">"1 分钟"</item>
-    <item msgid="7001195990902244174">"2 分钟"</item>
-    <item msgid="7489864775127957179">"5 分钟"</item>
-    <item msgid="2314124409517439288">"10 分钟"</item>
-    <item msgid="6864027152847611413">"30 分钟"</item>
-  </string-array>
+    <string-array name="screen_timeout_entries">
+        <item>15 秒</item>
+        <item>30 秒</item>
+        <item>1 分钟</item>
+        <item>2 分钟</item>
+        <item>5 分钟</item>
+        <item>10 分钟</item>
+        <item>30 分钟</item>
+        <item>保持常亮</item>
+    </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"永不"</item>
     <item msgid="2194151041885903260">"15 秒"</item>
