--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -43,9 +43,9 @@
 
     <!-- Whether the device support custom performance profiles. Leave empty when
          the device do not support it. -->
-    <string name="config_perf_profile_prop" translatable="false"></string>
+    <string name="config_perf_profile_prop" translatable="false">true</string>
     <!-- When config_perf_profile_prop = true, then this value MUST be one of the
          values listed in cm_arrays for perf_profile_values -->
-    <string name="config_perf_profile_default_entry" translatable="false"></string>
+    <string name="config_perf_profile_default_entry" translatable="false">1</string>
 
 </resources>
