--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -36,6 +36,17 @@
         android:title="@string/bluetooth_settings_title"
         android:icon="@drawable/ic_settings_bluetooth2" />
 
+    <!-- Mobile Data -->
+    <header
+        android:id="@+id/mobile_network_settings"
+        android:title="@string/data_settings_title"
+        android:icon="@drawable/ic_network_signal_4">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.phone"
+            android:targetClass="com.android.phone.MobileNetworkSettings" />
+    </header>
+
     <!-- Data Usage -->
     <header
         android:id="@+id/data_usage_settings"
@@ -84,13 +95,13 @@
         android:title="@string/launcher_settings_title"
         android:icon="@drawable/ic_settings_launcher" />
 
-    <!-- Performance -->
+    <!-- Performance Center -->
     <header
-        android:id="@+id/performance_settings"
-        android:fragment="com.android.settings.carbon.PerformanceSettings"
+        android:id="@+id/performance_controls"
+        android:fragment="com.brewcrewfoo.performance.activities.MainActivity"
         android:icon="@drawable/ic_settings_performance"
-        android:title="@string/performance_settings_title" />
-
+        android:title="@string/performance_settings" />
+        
     <!-- Themes -->
     <header
         android:id="@+id/themes_settings"
