--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -35,7 +35,7 @@
     <string name="increasing_ring_interval_5seconds">5 seconds</string>
     <string name="increasing_ring_interval_10seconds">10 seconds</string>
 
-    <!-- Profiles settings  -->
+    <!-- Profiles settings -->
     <string name="profiles_settings_title">Profiles</string>
     <string name="profiles_add">Add</string>
     <string name="profile_menu_delete">Delete</string>
@@ -63,7 +63,7 @@
     <string name="menu_new_profile">New profile</string>
     <string name="new_profile_name">&lt;new profile&gt;</string>
 
-    <!-- Rename Dialog  -->
+    <!-- Rename Dialog -->
     <string name="rename_dialog_title">Rename</string>
     <string name="rename_dialog_message">Enter a new name</string>
     <string name="duplicate_profile_name">Duplicate profile name!</string>
@@ -110,7 +110,7 @@
     <string name="choose_soundtone">Choose notification tone</string>
     <string name="choose_ringtone">Choose ringtone</string>
 
-    <!-- Sound settings screen, setting option name to pick ringtone (a list dialog comes up)-->
+    <!-- Sound settings screen, setting option name to pick ringtone (a list dialog comes up) -->
     <string name="soundtone_title">Notification tone</string>
     <string name="soundtone_summary" translatable="false">""</string>
 
@@ -147,7 +147,7 @@
     <string name="toggleWimax">WiMAX</string>
     <string name="toggleNfc">NFC</string>
 
-    <!-- Sound volumes panel   -->
+    <!-- Sound volumes panel -->
     <string name="link_volume_ringtones">Link ringtone &amp; notifications volumes</string>
     <string name="link_volume_mutes">Silent mode affects notifications</string>
     <string name="volume_keys_control_ring_stream">Volume keys control ringtone volume</string>
@@ -190,7 +190,7 @@
     <string name="pulse_speed_slow">Slow</string>
     <string name="pulse_speed_very_slow">Very slow</string>
 
-    <!-- Battery light settings  -->
+    <!-- Battery light settings -->
     <string name="battery_light_title">Battery light</string>
     <string name="battery_low_pulse_title">Pulse if battery low</string>
     <string name="battery_light_list_title">Colors</string>
@@ -299,14 +299,13 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="start_time_title">Start</string>
     <string name="end_time_title">End</string>
 
-
-    <!-- About phone screen,  setting option name-->
+    <!-- About phone screen,  setting option name -->
     <string name="mod_version">Carbon version</string>
     <string name="mod_version_default">Unknown</string>
     <!-- About phone screen, build date of ROM -->
     <string name="build_date">Build date</string>
-    <string name="build_date_default">2012-01-01-0000</string>
-    <!-- About device screen, Cpu info. -->
+    <string name="build_date_default" translatable="false">2012-01-01-0000</string>
+    <!-- About device screen, Cpu info -->
     <string name="cpu_info">CPU</string>
     <!-- About phone screen, Free memory info -->
     <string name="mem_info">Memory</string>
@@ -345,7 +344,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
 
     <!-- Performance Settings : I/O scheduler settings title -->
     <string name="io_scheds_title">I/O scheduler</string>
-    <!-- Performance Settings : I/O scheduler settings summary. -->
+    <!-- Performance Settings : I/O scheduler settings summary -->
     <string name="io_scheds_summary">Change I/O scheduler</string>
 
     <!-- Performance Settings : I/O scheduler settings sub items -->
