--- a/res/values-zh-rCN/cr_strings.xml
+++ b/res/values-zh-rCN/cr_strings.xml
@@ -297,7 +297,7 @@
     <string name="display_rotation_title">屏幕旋转</string>
     <string name="display_rotation_disabled">不使用</string>
     <string name="display_rotation_unit">度</string>
-    <string name="display_lockscreen_rotation_title">开启锁屏界面旋转</string></string>
+    <string name="display_lockscreen_rotation_title">开启锁屏界面旋转</string>
     <string name="display_rotation_category_title">旋转模式</string>
     <string name="display_rotation_0_title">0 度</string>
     <string name="display_rotation_90_title">90 度</string>
@@ -533,7 +533,7 @@
     <string name="lockscreen_disable_hints_title">不显示初始页面指示</string>
     <string name="lockscreen_disable_hints_summary">屏幕开启时且在竖屏锁屏界面下不显示当前小部件两旁小部件的边缘部分</string>
     <string name="lockscreen_use_widget_container_carousel_title">启用旋转木马动画</string>
-    <string name="lockscreen_use_widget_container_carousel_summary">竖屏下切换小部件时使用旋转木马动画Use carousel animation in portrait when switching between lock screen widgets</string>
+    <string name="lockscreen_use_widget_container_carousel_summary">竖屏下切换小部件时使用旋转木马动画</string>
 
     <!-- Kill app long-press back -->
     <string name="kill_app_longpress_back">返回键强制结束进程</string>
